--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
     "react-app-rewired": "^2.2.1",
-    "crypto-browserify": "^3.12.0"
+    "crypto-browserify": "^3.12.0",
+    "stream-browserify": "^3.0.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -46,7 +47,6 @@
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
-    "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "url": "^0.11.3"
   }
