--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "react-app-rewired": "^2.2.1",
     "crypto-browserify": "^3.12.0",
     "stream-browserify": "^3.0.0",
-    "stream-http": "^3.2.0"
+    "stream-http": "^3.2.0",
+    "https-browserify": "^1.0.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -45,7 +46,6 @@
   "devDependencies": {
     "assert": "^2.1.0",
     "buffer": "^6.0.3",
-    "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
     "url": "^0.11.3"
