--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "https-browserify": "^1.0.0",
-    "os-browserify": "^0.3.0"
+    "os-browserify": "^0.3.0",
+    "buffer": "^6.0.3"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -46,7 +47,6 @@
   },
   "devDependencies": {
     "assert": "^2.1.0",
-    "buffer": "^6.0.3",
     "process": "^0.11.10",
     "url": "^0.11.3"
   }
